vpro-kubernetes/memcache-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached-deployment
  labels:
    app: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
        - name: memcached
          image: memcached
          ports:
            - containerPort: 11211
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.25"
              memory: "256Mi"
