vpro-kubernetes/memcache-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
  labels:
    app: memcached
spec:
  selector:
    app: memcached
  ports:
    - protocol: TCP
      port: 11211
      targetPort: 11211
  type: ClusterIP
