vpro-kubernetes/rabbitmq-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
  type: ClusterIP
