vpro-kubernetes/tomcat-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  labels:
    app: tomcat
spec:
  selector:
    app: tomcat
  ports:
    - name: tomcat-svc-port
      protocol: TCP
      port: 8080
      targetPort: tomcat-port
  type: ClusterIP
